[package]
name = "mxml"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Mixin Markup Language"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/mxml"
keywords = ["xml","html","templating","library"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version="1.0", features=["span-locations"] }

[dependencies.syn]
version = "1.0"
features = ["full"]
